# sg_cli

./: .env  Cargo.toml  metadata.json
json-dumps/: 2022-04-14_13-17-31.json  2022-04-14_13-18-23.json
migrations/: 20220327124158_sg.sql
src/: configuration.rs  functions.rs  helper_funcs.rs  lib.rs  main.rs
