[package]
name = "sg_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
chrono = "0.4"
reqwest = "0.11"
url = "2.2.2"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "offline",
]